--- a/.config/i3status/config
+++ b/.config/i3status/config
@@ -1,13 +1,3 @@
-
-# ceerious i3 status config
-# see "man i3status" for documentation.
-#
-# It is important that this file is edited as UTF-8.
-# The following line should contain a sharp s:
-# ß
-# If the above line is not correctly displayed, fix your editor first!
-###############################################################################
-
 general {
   output_format = "i3bar"
     interval = 5
@@ -25,6 +15,13 @@ order += "cpu_temperature 0"
 order += "memory"
 order += "load"
 order += "tztime local"
+order += "memory_mb"
+
+exec memory_mb {
+    format = " %output"
+    command = "free -m | awk '/Mem:/ { printf \"%dMB/%dMB\", $3, $2 }'"
+    interval = 5
+}
 
 cpu_temperature 0 {
   format = "%degrees °C"
