--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -24,8 +24,6 @@
       "custom/spacer1",
       "disk",
       "custom/spacer1",
-      "network",
-      "custom/spacer1",
       "network#info",
       "custom/spacer1",
       "pulseaudio",
@@ -125,7 +123,7 @@
       "interval": 10,
       "bat": "BAT0",
       "states": {
-        "good": 95,
+        "good": 80,
         "warning": 25,
         "critical": 10
       },
@@ -265,27 +263,17 @@
     "position": "top",
     "name": "indicator",
     "modules-left": [
-      "battery",
-      "pulseaudio"
+      "battery"
     ],
-    "modules-right": [
-      "sway/mode"
-    ],
-    "sway/mode": {
-      "always-on": true,
-      "format": "",
-      "tooltip": false
-    },
     "battery": {
       "interval": 10,
       "format": "{} ",
       "format-critical": " ",
       "states": {
-        "critical": 25
+        "good": 80,
+        "warning": 25,
+        "critical": 10
       }
-    },
-    "pulseaudio": {
-      "format": "{volume}%"
     }
   }
 ]
