--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -39,7 +39,7 @@ set-window-option -g mode-keys vi # vi mode
 
 # Set the title of the window to its default (change 'tmux a')
 set -g set-titles on
-set -g set-titles-string "#{pane_title}"
+set -g set-titles-string "#W"
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-yank'
