--- a/.config/sway/config
+++ b/.config/sway/config
@@ -45,8 +45,8 @@ set $ws1 "1:  "
 set $ws2 "2:  "
 set $ws3 "3:  "
 # Rest of the workspaces are often unused
-set $ws4 "4: 󰏶 "
-set $ws5 "5 "
+set $ws4 "4: 󰕼 "
+set $ws5 "5   "
 set $ws6 "6 "
 set $ws7 "7 "
 set $ws8 "8 "
@@ -77,6 +77,8 @@ set $ws10 "10 "
     bindsym $mod+Shift+9 move container to workspace number $ws9
     bindsym $mod+Shift+0 move container to workspace number $ws10
 
-# Apps in Workspaces
+# Apps in Workspaces (swaymsg -t get_tree | grep app_id)
     assign [class=Brave-browser] $ws2
     assign [class=obsidian] $ws3
+#    assign [class=vlc] $ws4
+#    assign [app_id=org.pwmt.zathura] $ws5
