--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -51,7 +51,8 @@ detect_folders = []
 disabled = false
 
 [elixir]
-symbol = " "
+format = '[$symbol]($style)'
+symbol = " v..."
 
 [elm]
 symbol = " "
@@ -157,6 +158,7 @@ Windows = "󰍲 "
 
 [package]
 symbol = "󰏗 "
+disabled = true
 
 [perl]
 symbol = " "
